force-app/main/default/objects/NCMT_Project_Cost_Summary__c/NCMT_Project_Cost_Summary__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <label>Project Cost Summary</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Cost Summary ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Cost Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>