force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/CEW_ECC__c.field-meta.xml
<CustomField>
    <fullName>CEW_ECC__c</fullName>
    <formula>CEW_ECCA__c *  Project_Name__r.ECCMultiplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEW ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>