force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/CEW_ECCA__c.field-meta.xml
<CustomField>
    <fullName>CEW_ECCA__c</fullName>
    <formula>((CEW_Total_Ditect_Cost__c - CEW_Total_Ditect_Cost1__c) *  Project_Name__r.CECAMultiplier__c *( 1+Project_Name__r.Total_Escalation__c)) +
(CEW_Total_Ditect_Cost1__c * Project_Name__r.CECAMultiplier__c *( 1+Project_Name__r.Total_Escalation__c + Project_Name__r.Total_Escalation_CPE__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEW ECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>