force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/CEW_Total_Cost_GSF__c.field-meta.xml
<CustomField>
    <fullName>CEW_Total_Cost_GSF__c</fullName>
    <formula>if(Project_Name__r.Project_Area_GSF__c=0, CEW_Total_Ditect_Cost__c, CEW_Total_Ditect_Cost__c/Project_Name__r.Project_Area_GSF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEW Total Cost/GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>