force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/CEW_Total_Ditect_Cost__c.field-meta.xml
<CustomField>
    <fullName>CEW_Total_Ditect_Cost__c</fullName>
    <label>CEW Total Cost (W/O Markup)</label>
    <summarizedField>NCMT_CEW_Work_Item__c.Total_Direct_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_CEW_Work_Item__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>