force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Contingency_Unknown_Site_Design__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Unknown_Site_Design__c</fullName>
    <formula>Security_Cost__c + (Security_Cost__c *  Project_Name__r.Design_and_Site_Contingency__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contingency - Unknown Site/Design</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>