force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Core_Shell_Cost_wP100__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Cost_wP100__c</fullName>
    <formula>Core_Shell_Total_Cost__c + (Core_Shell_Total_Cost__c * P100_Leed_Percentages__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Shell Total Cost (w. P100-LEED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>