force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Core_Shell_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Total_Cost__c</fullName>
    <label>Core Shell Total Cost</label>
    <summarizedField>NCMT_Core_Shell_Cost_Detail__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Core_Shell_Cost_Detail__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>