force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Core_Shell_Total_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Total_Cost_Adjusted__c</fullName>
    <formula>Core_Shell_Cost_wP100__c * Project_Name__r.Core_Shell_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Shell Total Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>