force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>