force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Cost_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Code__c</fullName>
    <formula>Cost_Category_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category Code</label>
    <type>Text</type>
</CustomField>