force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Cost_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Description__c</fullName>
    <formula>Cost_Category_ID__r.Category_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category Description</label>
    <type>Text</type>
</CustomField>