force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Cost_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cost Category ID</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>Project Cost Summary</relationshipLabel>
    <relationshipName>Project_Cost_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>