force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Cost_Category_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Sort_Order__c</fullName>
    <formula>Cost_Category_ID__r.Sort_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>