force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Cost_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category_Type__c</fullName>
    <formula>TEXT(Cost_Category_ID__r.Estimate_Format__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Category Type</label>
    <type>Text</type>
</CustomField>