force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Direct_Cost_GSF__c.field-meta.xml
<CustomField>
    <fullName>Direct_Cost_GSF__c</fullName>
    <formula>If
(
(Project_Name__r.RecordType.DeveloperName = &apos;Parking_Garage&apos;),
Total_Cost_Adjusted__c / Project_Name__r.Parking_Garage_Gross_Area_SF__c,
Total_Cost_Adjusted__c / Project_Name__r.Total_GSF__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Cost/GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>