force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Direct_Security_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Security_Cost__c</fullName>
    <label>Direct Security Cost</label>
    <summarizedField>NCMT_DES_Items__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_DES_Items__c.Cost_Type__c</field>
        <operation>equals</operation>
        <value>Security</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCMT_DES_Items__c.Include_In_Estimate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_DES_Items__c.Project_Cost_Summary_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>