force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/ECC__c.field-meta.xml
<CustomField>
    <fullName>ECC__c</fullName>
    <formula>IF( TEXT(Project_Name__r.Project_type__c) != &apos;Repair &amp; Alteration - Work Item Detail&apos;,((ECCA__c *(1+ Project_Name__r.Construction_Contingency__c))*(1+ Project_Name__r.Art_In_Architecture__c)), ((RA_ECCA__c *(1+ Project_Name__r.Construction_Contingency__c))*(1+ Project_Name__r.Art_In_Architecture__c)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>