force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/ECC_By_Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>ECC_By_Cost_Category__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ECC By Cost Category</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>