force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/ECC_GSF__c.field-meta.xml
<CustomField>
    <fullName>ECC_GSF__c</fullName>
    <formula>IF( Project_Name__r.RecordType.Name &lt;&gt; &apos;Parking Garage&apos;, ECC__c / Project_Name__r.Total_GSF__c,ECC__c / Project_Name__r.Parking_Garage_Gross_Area_SF__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECC/GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>