force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/ECCA__c.field-meta.xml
<CustomField>
    <fullName>ECCA__c</fullName>
    <formula>(
(Total_Cost_Adjusted__c * (1 +  Project_Name__r.Design_and_Site_Contingency__c)) * (1 + Project_Name__r.General_Contractor_Overhead_Profit_Bonds__c)) * (1+
Project_Name__r.Total_Escalation__c +  if(isnull(Project_Name__r.Total_Escalation_CPE__c), 0,  (Project_Name__r.Total_Escalation_CPE__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>