force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/ECCA_GSF__c.field-meta.xml
<CustomField>
    <fullName>ECCA_GSF__c</fullName>
    <formula>If
(
(Project_Name__r.RecordType.DeveloperName = &apos;Parking_Garage&apos;),
ECCA__c / Project_Name__r.Parking_Garage_Gross_Area_SF__c,IF( TEXT(Project_Name__r.Project_type__c)== &apos;Repair &amp; Alteration - Work Item Detail&apos;, RA_ECCA__c /Project_Name__r.Total_GSF__c ,ECCA__c / Project_Name__r.Total_GSF__c )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECCA/GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>