force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Estimate_Format__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Format__c</fullName>
    <formula>Text(Cost_Category_ID__r.Estimate_Format__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimate Format</label>
    <type>Text</type>
</CustomField>