force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>