force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Leed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Leed_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Leed Percentage</description>
    <label>LEED Percentage (Federal Mandate &amp; LEED)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>