force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Other_Direct_Cost_GSF__c.field-meta.xml
<CustomField>
    <fullName>Other_Direct_Cost_GSF__c</fullName>
    <formula>If 
( 
(Project_Name__r.RecordType.DeveloperName = &apos;Parking_Garage&apos;), 
Other_Direct_Costs__c / Project_Name__r.Parking_Garage_Gross_Area_SF__c, 
Other_Direct_Costs__c / Project_Name__r.Total_GSF__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Direct Cost/GSF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>