force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Other_Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Direct_Costs__c</fullName>
    <label>Total Other Direct Costs</label>
    <summarizedField>NCMT_Other_Direct_Cost__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Other_Direct_Cost__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>