force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Other_Direct_Security_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Direct_Security_Costs__c</fullName>
    <label>Other Direct Security Costs</label>
    <summarizedField>NCMT_Other_Direct_Cost__c.Total_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_Other_Direct_Cost__c.Cost_Based_On__c</field>
        <operation>equals</operation>
        <value>Security</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_Other_Direct_Cost__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>