force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/P100_Leed_Percentages__c.field-meta.xml
<CustomField>
    <fullName>P100_Leed_Percentages__c</fullName>
    <description>Combined Leed and P100 Percentages</description>
    <formula>Leed_Percentage__c  +  P100_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Combined Leed and P100 Percentages</inlineHelpText>
    <label>P100 - Leed Percentages</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>