force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/P100_Percentage__c.field-meta.xml
<CustomField>
    <fullName>P100_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>P100 Percentage</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>