force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Parking_Cost__c.field-meta.xml
<CustomField>
    <fullName>Parking_Cost__c</fullName>
    <label>Parking Cost</label>
    <summarizedField>NCMT_Core_Shell_Cost_Detail__c.ParkingCost__c</summarizedField>
    <summaryForeignKey>NCMT_Core_Shell_Cost_Detail__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>