force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>NCMT Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>Project Cost Summary</relationshipLabel>
    <relationshipName>Project_Cost_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>