force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_ECC__c.field-meta.xml
<CustomField>
    <fullName>RA_ECC__c</fullName>
    <formula>(Total_RA_ECCA__c *(1+ Project_Name__r.Construction_Contingency__c)*(1+ Project_Name__r.Art_In_Architecture__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RA ECC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>