force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_ECCA__c.field-meta.xml
<CustomField>
    <fullName>RA_ECCA__c</fullName>
    <description>for RA WorkItem Detail project type</description>
    <label>RA ECCA</label>
    <summarizedField>NCMT_RA_Work_Items__c.ECCA__c</summarizedField>
    <summaryForeignKey>NCMT_RA_Work_Items__c.Work_Item_Type_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>