force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_ECCA_Shell_Parameter__c.field-meta.xml
<CustomField>
    <fullName>RA_ECCA_Shell_Parameter__c</fullName>
    <label>RA ECCA Shell / Parameter</label>
    <summarizedField>NCMT_RA_Work_Items__c.ECCA_Shell_Parameter__c</summarizedField>
    <summaryForeignKey>NCMT_RA_Work_Items__c.Work_Item_Type_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>