force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_Security__c.field-meta.xml
<CustomField>
    <fullName>RA_Security__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RA Security %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>