force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_Security_Cost__c.field-meta.xml
<CustomField>
    <fullName>RA_Security_Cost__c</fullName>
    <formula>RA_Security__c * Project_Name__r.RA_Security_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RA Security Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>