force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_Security_Costs__c.field-meta.xml
<CustomField>
    <fullName>RA_Security_Costs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RA Security Costs*</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>