force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/RA_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>RA_Total_Cost__c</fullName>
    <formula>GSA_Costs__c +  GSAPkg_Costs__c +  Tenant_RWA_Costs__c +  Tenant_Amortized_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RA Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>