force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Replace_Cost__c.field-meta.xml
<CustomField>
    <fullName>Replace_Cost__c</fullName>
    <description>Replacement Cost</description>
    <label>Replacement Cost</label>
    <summarizedField>NCMT_RA_Work_Items__c.Total_Costs_Including_Phasing__c</summarizedField>
    <summaryFilterItems>
        <field>NCMT_RA_Work_Items__c.Work_Item_Type__c</field>
        <operation>equals</operation>
        <value>Replace</value>
    </summaryFilterItems>
    <summaryForeignKey>NCMT_RA_Work_Items__c.Work_Item_Type_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>