force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Security_Cost__c.field-meta.xml
<CustomField>
    <fullName>Security_Cost__c</fullName>
    <label>Security Cost</label>
    <summarizedField>NCMT_Security_Detail__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_Security_Detail__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>