force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Security_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Security_Cost_Adjusted__c</fullName>
    <formula>IF( TEXT(Project_Name__r.Project_type__c) == &apos;New Construction&apos;,Security_Cost__c * Project_Name__r.Core_Shell_Adjustment_Factor__c,   RA_Security__c *  Project_Name__r.RA_Security_Cost__c * Project_Name__r.Core_Shell_Adjustment_Factor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>