force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Tenant_RWA_Costs__c.field-meta.xml
<CustomField>
    <fullName>Tenant_RWA_Costs__c</fullName>
    <description>Tenant RWA Costs</description>
    <label>Tenant RWA Costs</label>
    <summarizedField>NCMT_RA_Work_Items__c.Tenant_RWA_Costs__c</summarizedField>
    <summaryForeignKey>NCMT_RA_Work_Items__c.Work_Item_Type_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>