force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/TI_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>TI_Cost_Adjusted__c</fullName>
    <formula>IF( 
  (Cost_Category_Code__c = &apos;F20&apos;  &amp;&amp; TEXT(Project_Name__r.Building_Cost_Type__c) != &apos;TI Retrofit&apos;),0,
  TI_Cost__c *  Project_Name__r.TI_Adjustment_Factor__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TI Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>