force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Core_Shell_Total_Cost__c +  Security_Cost__c +  TI_Cost__c +  TRCS_Cost__c +  RA_Security_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>