force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Total_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Adjusted__c</fullName>
    <formula>IF( TEXT(Project_Name__r.Project_type__c) != &apos;Repair &amp; Alteration - Work Item Detail&apos; ,(Core_Shell_Total_Cost_Adjusted__c +  Security_Cost_Adjusted__c +  TRCS_Cost_Adjusted__c +  TI_Cost_Adjusted__c + Other_Direct_Costs__c ),(GSA_Costs__c + GSAPkg_Costs__c + Tenant_RWA_Costs__c + Tenant_Amortized_Costs__c + Other_Direct_Costs__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>