force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Total_Direct_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Cost__c</fullName>
    <formula>Direct_Core_Shell_Cost__c +  Direct_TI_Cost__c +  Direct_Security_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Direct Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>