force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/Total_RA_ECCA__c.field-meta.xml
<CustomField>
    <fullName>Total_RA_ECCA__c</fullName>
    <formula>RA_ECCA__c + 
((( Other_Direct_Costs__c * (1 + Project_Name__r.Design_and_Site_Contingency__c)) * (1 + Project_Name__r.General_Contractor_Overhead_Profit_Bonds__c)) * (1+ 
Project_Name__r.Total_Escalation__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total RA ECCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>