force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/TRCS_Cost__c.field-meta.xml
<CustomField>
    <fullName>TRCS_Cost__c</fullName>
    <label>TRCS Cost</label>
    <summarizedField>NCMT_TI_TRCS_Cost_Detail__c.TRCS_Total_Cost__c</summarizedField>
    <summaryForeignKey>NCMT_TI_TRCS_Cost_Detail__c.Project_Cost_Summary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>