force-app/main/default/objects/NCMT_Project_Cost_Summary__c/fields/TRCS_Cost_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>TRCS_Cost_Adjusted__c</fullName>
    <formula>TRCS_Cost__c * Project_Name__r.Core_Shell_Adjustment_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TRCS Cost Adjusted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>