force-app/main/default/objects/NCMT_Project_Cost_Summary__c/recordTypes/New_Construction.recordType-meta.xml
<RecordType>
    <fullName>New_Construction</fullName>
    <active>true</active>
    <description>New Construction</description>
    <label>New Construction</label>
</RecordType>