force-app/main/default/objects/NCMT_Project_Cost_Summary__c/recordTypes/New_Construction_CEW.recordType-meta.xml
<RecordType>
    <fullName>New_Construction_CEW</fullName>
    <active>true</active>
    <description>For Cost Estimating Workbook</description>
    <label>New Construction - CEW</label>
</RecordType>